<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <TextView
      android:text="@string/kalkulator"
      android:textAlignment="center"
      android:textSize="25sp"
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <EditText
      android:id="@+id/vall"
      android:inputType="number"
      android:layout_marginTop="20dp"
      android:minHeight="48dp"
      android:hint="@string/masukkan_angka"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <EditText
      android:id="@+id/val2"
      android:inputType="number"
      android:layout_marginTop="20dp"
      android:minHeight="48dp"
      android:hint="@string/masukkan_angka"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <Button
      android:text="@string/penambahan"
      android:layout_marginTop="10dp"
      android:id="@+id/buttonTambah"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <Button
      android:text="@string/pengurangan"
      android:layout_marginTop="10dp"
      android:id="@+id/buttonKurang"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <Button
      android:text="@string/perkalian"
      android:layout_marginTop="10dp"
      android:id="@+id/buttonKali"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <Button
      android:text="@string/pembagian"
      android:layout_marginTop="10dp"
      android:id="@+id/buttonBagi"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <TextView
      android:id="@+id/tvhasil"
      android:textAlignment="center"
      android:text="@string/hasil"
      android:minHeight="48dp"
      android:layout_marginTop="20dp"
      android:textSize="30sp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
</LinearLayout>
